@@ -1,7 +1,6 @@
-// Generated by CoffeeScript 1.12.2
 
 /* Please use this command to compile this file into the parent `js` directory:
-    coffee -w -o ../ -c bika.lims.analysisrequest.add_by_col.coffee
+    coffee --no-header -w -o ../ -c bika.lims.analysisrequest.add_by_col.coffee
  */
 
 
@@ -2092,11 +2091,13 @@
       }
     };
     recalc_prices = function(arnum) {
-      var ardiscount_amount, arprofiles_price, arprofiles_vat_amount, arservice_vat_amount, arservices_price, base_price, cb, checked, i, member_discount, profiles, service_price, service_vat_amount, services_from_priced_profile, subtotal, total, vat_amount;
+      var ardiscount_amount, arprofiles_price, arprofiles_vat_amount, arservice_vat_amount, arservices_price, base_price, cb, checked, i, member_discount, member_discount_applies, profiles, service_price, service_vat_amount, services_from_priced_profile, subtotal, total, vat_amount;
+      console.debug("recalc_prices::arnum=" + arnum);
       ardiscount_amount = 0.00;
       arservices_price = 0.00;
       checked = $('tr[uid] td[class*=\'ar\\.' + arnum + '\'] input[type=\'checkbox\']:checked');
       member_discount = parseFloat($('#bika_setup').attr('MemberDiscount'));
+      member_discount_applies = $.parseJSON($('#bika_setup').attr('MemberDiscountApplies'));
       profiles = $('div#Profiles-' + arnum + '-listing').children();
       arprofiles_price = 0.00;
       arprofiles_vat_amount = 0.00;
@@ -2133,7 +2134,8 @@
         i++;
       }
       base_price = arservices_price + arprofiles_price;
-      if (member_discount) {
+      if (member_discount && member_discount_applies) {
+        console.debug("Member discount applies with " + member_discount + "%");
         ardiscount_amount = base_price * member_discount / 100;
       }
       subtotal = base_price - ardiscount_amount;
